src/scss/frontend/_templates.scss
// Прогресс прокрутки страницы
.progress-line {
  top   : 0;
  left  : 0;
  right : 0;
  height: 3px;
}

// Шапка документа
.header {
  top             : 0;
  left            : 0;
  right           : 0;
  background-color: var(--color-white-60);
  backdrop-filter : blur(4px);
  transform       : translateY(var(--top));

  &__logo {
    min-width: 150px;
    width    : 150px;
  }

  &__accordion[data-accordion="active"] &__arrow {
    transform: rotate(180deg);
  }

  &__accordion[data-accordion="active"] &__content {
    top: 50px;
  }

  &__content {
    top  : 80px;
    right: 0;
  }

  @media(max-width: $md) {
    &__logo {
      min-width: 100px;
      width    : 100px;
    }
  }
}

// Мобильное меню
.mobile {
  inset: 0;

  &__content {
    max-width : 375px;
    box-shadow: 0 0 0 100vw var(--color-black-50);
  }

  &__logo {
    min-width: 120px;
    width    : 120px;
  }

  &:not([data-mobile="open"]) {
    opacity   : 0;
    visibility: hidden;
  }

  &:not([data-mobile="open"]) &__content {
    transform : translateX(-100%);
    opacity   : 0;
    visibility: hidden;
  }

  &:not([data-mobile="open"]) &__head {
    transform: translateY(-80px);
  }

  &:not([data-mobile="open"]) &__nav {
    transform: translateX(-220px);
    opacity  : 0;
  }

  &:not([data-mobile="open"]) &__footer {
    transform: translateY(-50px);
    opacity  : 0;
  }

  &[data-mobile="open"] {
    opacity   : 1;
    visibility: visible;
  }

  &[data-mobile="open"] &__content {
    transform : translateX(0);
    opacity   : 1;
    visibility: visible;
  }

  &[data-mobile="open"] &__head {
    transform: translateY(0);
  }

  &[data-mobile="open"] &__nav {
    transform: translateX(0);
    opacity  : 1;
  }

  &[data-mobile="open"] &__footer {
    transform: translateY(0);
    opacity  : 1;
  }
}

// Градиент
.gradient {
  position: relative;

  &::before,
  &::after {
    content       : "";
    position      : absolute;
    top           : 0;
    bottom        : 0;
    width         : 320px;
    height        : 100%;
    pointer-events: none;
    z-index       : 100;
  }

  &::before {
    left            : 0;
    background-image: linear-gradient(-90deg, var(--color-none) 0%, var(--color-grey) 100%);
  }

  &::after {
    right           : 0;
    background-image: linear-gradient(90deg, var(--color-none) 0%, var(--color-grey) 100%);
  }

  @media(min-width: 2000px) {

    &::before,
    &::after {
      display: none;
    }
  }

  @media(max-width: $xl) {

    &::before,
    &::after {
      width: 120px;
    }
  }

  @media(max-width: $md) {

    &::before,
    &::after {
      display: none;
    }
  }
}

// Карта
.map {
  height: 400px;

  @media(max-width: $sm) {
    & {
      height: 300px;
    }
  }
}

// Подвал
.footer {
  background-image: linear-gradient(240.03deg, var(--color-none) 31.71%, var(--color-black-50) 83.17%);

  &__logo {
    min-width: 255px;
    width    : 255px;
  }

  @media(hover) {
    &__social {
      &:hover {
        background-color: var(--color-white-50);
      }
    }
  }

  @media(max-width: $md) {
    &__logo {
      min-width: 170px;
      width    : 170px;
    }
  }
}

